# sys-microbenchmark

./: .gitmodules  CMakeLists.txt  LICENSE  aarch64-linux-gnu-cross.ini  aarch64-linux-gnu-toolchain.cmake  aarch64.cpp  actual-freq.cpp  actual-freq.h  barrier.h  branch-aarch64.h  branch-x86.h  branch.cpp  build-hwloc.sh  build-test.sh  cpu-feature.cpp  cpu-feature.h  cpuset.cpp  cpuset.h  emscripten.cpp  emsdk-cross.ini  features.h  fpu.cpp  gen-page.sh  idiv.cpp  instruction-aarch64.h  instruction-x86.h  instruction.cpp  io.cpp  ipc.cpp  ipc.h  json.h  libc.cpp  libcxx.cpp  lwabi.cpp  main.cpp  memalloc.h  memory-bandwidth.cpp  memory-bandwidth.h  memory-latency.cpp  memory.cpp  (+27 more)
docs/viewer/: combined.json  sys-microbenchmark.js  sys-microbenchmark.wasm  view.js
html/: view.html  view.js  view.ts
subprojects/: .gitignore  cpuinfo.wrap  hwloc.wrap
subprojects/packagefiles/hwloc/: meson.build
tools/: CMakeLists.txt  showresult.cpp  wasic++-wrapper.py  wasicc-wrapper.py
